manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirotalk
  labels:
    app: mirotalk
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: mirotalk
  template:
    metadata:
      labels:
        app: mirotalk
    spec:
      containers:
        - name: mirotalk
          image: miroslavpejic85/mirotalk:latest
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop: [ALL]
