manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirotalk
  labels:
    app: mirotalk
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: mirotalk
