manifests/httproute-tunnel.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mirotalk-tunnel
spec:
  parentRefs:
    - name: yh-cluster
      namespace: cloudflare-gateway
  hostnames:
    - mirotalk-yh-k8s.tsuru.run
  rules:
    - backendRefs:
        - name: mirotalk
          port: 80
