manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mirotalk
spec:
  parentRefs:
    - name: mirotalk-gateway
  hostnames:
    - mirotalk.yh.k8s.tsuru.run
  rules:
    - backendRefs:
        - name: mirotalk
          port: 80
